[package]
name = "ic-asset"
version = "0.20.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Library for storing files in an asset canister."
documentation = "https://docs.rs/ic-asset"
categories = ["api-bindings", "data-structures"]
keywords = ["internet-computer", "assets", "icp", "dfinity"]

[dependencies]
backoff.workspace = true
candid = { workspace = true }
derivative = "2.2.0"
dfx-core = { path = "../../../dfx-core" }
flate2.workspace = true
futures.workspace = true
futures-intrusive = "0.4.0"
globset = "0.4.9"
hex = { workspace = true, features = ["serde"] }
ic-agent = { workspace = true, features = ["pem"] }
ic-utils = { workspace = true }
itertools.workspace = true
json5 = "0.4.1"
mime.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog = { workspace = true, features = ["max_level_trace"] }
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true

[dev-dependencies]
mockito = "0.31.0"
proptest = "1.0.0"
tempfile = "3.3.0"
