[package]
name = "{project_name}_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", branch = "standard-env-vars" }
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
